--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>RedLink – Save & Reuse Your Frequently Used Text</title>
+  <meta name="description" content="RedLink is a simple tool to save and reuse frequently used text and links. No backend, no tracking—everything stays in your browser's local storage." />
+  <meta name="keywords" content="RedLink, text saver, quick access, save links, clipboard manager, local storage" />
+  <meta name="author" content="Your Name or RedLink Team" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/link.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta property="og:title" content="RedLink – Save & Reuse Your Text Instantly" />
+    <meta property="og:description" content="Tired of typing the same text over and over? Save your frequently used text and links with RedLink and access them anytime!" />
+    <meta property="og:url" content="https://redlinkindia.netlify.app/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
